bin_PROGRAMS = nfportscan
nfportscan_SOURCES =  grammar.y scanner.l convert.c file.c ipconv.c list.c nf_common.c nfportscan.c nftree.c util.c convert.h file.h grammar.h ipconv.h list.h nf_common.h nfdump.h nffile.h nftree.h rbtree.h util.h version.h

BUILT_SOURCES = grammar.h
AM_YFLAGS = -d

CLEANFILES = grammar.c grammar.h
